<resources>
    <string name="app_name">linearTest</string>
    <string name="cmd_01">CMD_01</string>
    <string name="cmd_02">CMD_02</string>
    <string name="cmd_03">CMD_03</string>
    <string name="cmd_04">CMD_04</string>
    <string name="cmd_05">CMD_05</string>
    <string name="cmd_06">CMD_06</string>
    <string name="cmd_11">CMD_11</string>
    <string name="cmd_12">CMD_12</string>
    <string name="cmd_13">CMD_13</string>
    <string name="cmd_14">CMD_14</string>
    <string name="cmd_15">CMD_15</string>
    <string name="cmd_16">CMD_16</string>

    <string name="clear">CLEAR</string>
    <string name="tag">TAG</string>

    <string name="led_on">Led ON</string>
    <string name="led_off">Led OFF</string>
    <string name="led_on_off">Led ON/OFF</string>

    <string name="logTx">Log TX</string>
    <string name="logRx">Log RX</string>
    <string name="sendOn">Send\nOn</string>
    <string name="sendOff">Send\nOff</string>
    <string name="receiveOn">Receive\nOn</string>
    <string name="receiveOff">Receive\nOff</string>

    <string name="billAcceptorSwitch">Noteiro</string>
    <string name="billAcceptorOn">Noteiro\nOn</string>
    <string name="billAcceptorOff">Noteiro\nOff</string>
    <string name="billAcceptorQuestion">Noteiro\nQuestion</string>
    <string name="billAcceptorReset">Noteiro\nReset</string>
    <string name="startStateMachine">Start\nFSM</string>
    <string name="stopStateMachine">Stop\nFSM</string>

    <string name="automaticBillAcceptor">Noteiro Automático</string>


</resources>
