<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topArea1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTopArea1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBillAcceptorOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/billAcceptorOn" />


        <Button
            android:id="@+id/btnBillAcceptorQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/billAcceptorQuestion" />

        <Button
            android:id="@+id/btnBillAcceptorStartMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/startStateMachine" />

        <Button
            android:id="@+id/btnLogTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/tag" />


        <CheckBox
            android:id="@+id/checkBoxBillAcceptorAutomatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/automaticBillAcceptor" />


        <CheckBox
            android:id="@+id/checkBoxLogTX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/logTx" />

        <CheckBox
            android:id="@+id/checkBoxLogRX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/logRx" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/topArea2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTopArea2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBillAcceptorOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/billAcceptorOff" />


        <Button
            android:id="@+id/btnBillAcceptorReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/billAcceptorReset" />

        <Button
            android:id="@+id/btnBillAcceptorStopMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/stopStateMachine" />


        <Button
            android:id="@+id/btnLogClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Spinner
            android:id="@+id/spinnerDelayQuestion"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="gravity" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/midleArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="10">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/colorTextLog"
            android:text="" />


        <LinearLayout
            android:id="@+id/midleAreaRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/textHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:background="@color/colorTextHistory"
                android:text="" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:background="@color/colorTextResult"
                android:fontFamily="sans-serif-black"
                android:text=""
                android:textAlignment="textEnd"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottonArea"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btnBillAcceptorColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/green_bill_acceptor"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn5reais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/bill5reais"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn10reais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/bill10reais"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn20reais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/bill20reais"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn50reais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/bill50reais"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/led_on"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLedOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/led_off"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnLedOnOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/led_on_off"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>